--- a/ex1_collections.ipynb
+++ b/ex1_collections.ipynb
@@ -22,13 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "24308f02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'박윤영'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [+] Tuple은 (value 1, value 2, ..., value n)와 같은 형식으로 선언\n",
-    "coordinate = ... # Tuple 예: 좌표\n",
+    "coordinate = (\"박윤영\",\"남\",\"2001-05-14\") # Tuple 예: 좌표\n",
     "coordinate[0]  # 셀 마지막 문장 실행 결과는 print() 상관없이 출력"
    ]
   },
@@ -40,7 +51,7 @@
    "outputs": [],
    "source": [
     "# [+] Tuple은 값 변경이 불가능하다(immutable).\n",
-    "..."
+    "...\n"
    ]
   },
   {
@@ -368,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
