--- a/ex2_functions.ipynb
+++ b/ex2_functions.ipynb
@@ -55,6 +55,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'안녕하게요!! 저의 이름은홍길동입니다.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def name(name):\n",
+    "    mant=\"안녕하게요!! 저의 이름은\"+ name + \"입니다.\"\n",
+    "    return mant\n",
+    "name(\"홍길동\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -305,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
