오류 수정 및 최종 깃 제출

--- a/ex06_pandas_objects.ipynb
+++ b/ex06_pandas_objects.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pandas"
+    "!pip3 install pandas"
    ]
   },
   {
@@ -1226,8 +1226,6 @@
     "states.iloc[0, 2] = 90\n",
     "states"
    ]
-<<<<<<< HEAD
-=======
   },
   {
    "cell_type": "code",
@@ -1235,7 +1233,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 46e0832c746742b798d7017f8837990322840b69
   }
  ],
  "metadata": {
