--- a/ex3_numpy_arrays.ipynb
+++ b/ex3_numpy_arrays.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "## <strong>3. NumPy 배열</strong>\n",
     "20205812 8박윤영"
-
    ]
   },
   {
@@ -19,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -32,14 +30,12 @@
    ],
    "source": [
     "# Python 패키지 설치 명령어\n",
-    "!pip install numpy"
+    "!pip3 install numpy"
    ]
   },
   {
    "cell_type": "code",
-
    "execution_count": 1,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +44,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -91,8 +86,6 @@
    "source": []
   },
   {
-=======
->>>>>>> 46e0832c746742b798d7017f8837990322840b69
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -522,8 +515,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-=======
     "포리지 과제"
    ]
   },
@@ -540,7 +531,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
->>>>>>> 46e0832c746742b798d7017f8837990322840b69
     "배열 생성 예제"
    ]
   },
@@ -901,13 +891,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-<<<<<<< HEAD
-    "hsatck과 concatenate의 차이점 알기"
-=======
-    "hsatck과 concatenate의 차이점 알기 밑에 적어보셈"
->>>>>>> 46e0832c746742b798d7017f8837990322840b69
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
