--- a/ex05_numpy_advanced.ipynb
+++ b/ex05_numpy_advanced.ipynb
@@ -12,11 +12,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[52 93 15 72 61]\n",
+      " [21 83 87 75 75]\n",
+      " [88 24  3 22 53]]\n",
+      "[[False False  True False False]\n",
+      " [ True False False False False]\n",
+      " [False  True  True  True False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "a= np.random.randint(1,100, size=(3,5))\n",
+    "b = a<40\n",
+    "print(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -290,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +342,7 @@
     }
    ],
    "source": [
-    "!pip install seaborn"
+    "!pip3 install seaborn"
    ]
   },
   {
@@ -1479,7 +1505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1493,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
